SimpleWeather: WeatherNow redesign
* Move weather details to "cards"
* Better support for different screen sizes and tablet (large) layouts
* Android: use SwipeToRefreshLayout
* UWP: fix forecast panel not updating units
* Misc UI adjustments

--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -8,7 +8,7 @@
     android:fillViewport="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="com.thewizrd.simpleweather.SetupActivity">
+    tools:context="SimpleWeather.Droid.Controls.SetupActivity">
 
     <ScrollView
         android:layout_width="match_parent"
