--- a/SimpleWeather.Android/Resources/layout/location_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/location_panel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="75dp">
+    android:layout_height="@dimen/location_panel_height">
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/main_layout"
@@ -24,7 +24,7 @@
             android:maxLines="2"
             android:padding="10dp"
             android:textAppearance="@android:style/TextAppearance.Material.Inverse"
-            android:textSize="20sp"
+            android:textSize="@dimen/location_panel_text_size"
             tools:text="New York, NY" />
 
         <LinearLayout
@@ -34,15 +34,15 @@
 
             <me.grantland.widget.AutofitTextView
                 android:id="@+id/weather_temp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="@dimen/location_panel_textview_size"
+                android:layout_height="@dimen/location_panel_textview_size"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_margin="5dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Inverse"
-                android:textSize="20sp"
-                tools:text="50*" />
+                android:textSize="@dimen/location_panel_text_size"
+                tools:text="50º" />
 
             <me.grantland.widget.AutofitLayout
                 android:layout_width="wrap_content"
@@ -51,14 +51,14 @@
 
                 <SimpleWeather.Droid.Controls.WeatherIcon
                     android:id="@+id/weather_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="@dimen/location_panel_textview_size"
+                    android:layout_height="@dimen/location_panel_textview_size"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textAlignment="center"
                     android:layout_margin="10dp"
                     android:textAppearance="@android:style/TextAppearance.Material.Inverse"
-                    android:textSize="30sp"
+                    android:textSize="@dimen/location_panel_icon_size"
                     tools:text="@string/wi_night_cloudy" />
             </me.grantland.widget.AutofitLayout>
         </LinearLayout>
